--- a/exercises/10-Your-Own-Font/styles.css
+++ b/exercises/10-Your-Own-Font/styles.css
@@ -1,3 +1,6 @@
 .myTitle {
-	/*your code here*/
+	font-family: "Comforter brush", cursive;
 }
+/*
+https://www.delftstack.com/es/howto/css/css-import-google-font/#:~:text=La%20etiqueta%20link%20es%20la,el%20sitio%20web%20Google%20Fonts.
+*/
