--- a/exercises/13-Anchor-Like-Button/styles.css
+++ b/exercises/13-Anchor-Like-Button/styles.css
@@ -1,7 +1,21 @@
 .orange-btn {
-	/*your code here*/
+	object-position: 100%;
+	padding: 10px; /* relative to the width and length of the element itself*/
+	border-style: solid; /* neccesary for border to appear*/
+	border-radius: 4px;
+	border-color: black;
+	border-width: 2px;
+	color: #ffffff;
+	background-color: hwb(44 0% 0%);
+	text-decoration: none;
 }
 
 .orange-btn:hover {
-	/*YOUR CODE HERE FOR THE HOVER STATE*/
+	background-color: hwb(44 2% 9%);
+	border-style: none; /*only way to make it dissapear?*/
+}
+p {
+	padding: 0px;
+	object-position: ;
+	color: red;
 }
