--- a/exercises/06-Practicing-Rules/styles.css
+++ b/exercises/06-Practicing-Rules/styles.css
@@ -1,1 +1,37 @@
-/* add your styles here */
+body {
+	padding-left: 20px;
+	background-image: url(../../.learn/assets/background-vertical.jpg?raw=true);
+	background-size: 550 px;
+	background-repeat: repeat-y;
+	font-family: "Times New Roman", Times, serif;
+}
+h1 {
+	font-family: "Courier New", Courier, monospace;
+	color: red;
+}
+#id1 {
+	background-color: rgba(255, 255, 255, 0.2);
+	padding: 5px 5px 5px 5px;
+}
+/* unvisited link;¿¿¿¿ diferencia link/visited???*/
+a:link {
+	color: red;
+	/*text-decoration: none; se 
+	quitaria del link , pero no el color*/
+}
+
+/* visited link ?????????*/
+a:visited {
+	color: blue;
+}
+
+/* mouse over link*/
+a:hover {
+	color: green;
+	text-decoration: none;
+}
+
+/* selected link */
+a:active {
+	color: yellow;
+}
